--- a/CSS/sample.css
+++ b/CSS/sample.css
@@ -76,6 +76,7 @@ box-shadow: 0 5px 10px rgba(0,0,0,.2);
 text-align: center;
 margin: 0 0 40px;
 padding: 0;
+font-size: 25px;
 color: b;
 letter-spacing: 2px;
 }
@@ -84,6 +85,7 @@ letter-spacing: 2px;
 padding: 5px;
 margin-bottom: 30px;
 width: 55%;
+font-size: 10px;
 box-sizing: border-box;
 box-shadow: none;
 outline: none;
